@@ -2,30 +2,42 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>io.github.chris2018998</groupId>
     <artifactId>stone</artifactId>
-    <version>1.4.9</version>
+    <version>2.0.0</version>
     <name>stone</name>
     <url>https://www.github.com/Chris2018998/stone</url>
-    <description>Java Pools</description>
+    <description>Java Pools Implementation</description>
 
     <properties>
-        <gpg.skip>false</gpg.skip>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <skip.gpg>false</skip.gpg>
+        <skip.test>false</skip.test>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.source.encoding>UTF-8</project.source.encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <jmh.version>1.37</jmh.version>
+        <junit.version>5.13.0</junit.version>
+        <logback.version>1.5.18</logback.version>
+        <slf4j-api.version>2.0.17</slf4j-api.version>
+        <javassist.version>3.30.2-GA</javassist.version>
+
+        <jakarta.transaction-api.version>2.0.1</jakarta.transaction-api.version>
+        <jakarta.enterprise.cdi-api.version>4.1.0</jakarta.enterprise.cdi-api.version>
     </properties>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
     <developers>
         <developer>
             <name>Chris2018998</name>
             <email>Chris2018998@tom.com</email>
-            <url>https://github.com/Chris2018998/stone</url>
         </developer>
     </developers>
     <scm>
@@ -33,125 +45,165 @@
         <developerConnection>scm:git:git@github.com:Chris2018998/stone.git</developerConnection>
         <url>https://github.com/Chris2018998/stone</url>
     </scm>
+    <issueManagement>
+        <url>https://github.com/Chris2018998/stone/issues</url>
+    </issueManagement>
 
     <distributionManagement>
         <snapshotRepository>
-            <id>stone-ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+            <id>stone-central</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
         </snapshotRepository>
-        <repository>
-            <id>stone-ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
     </distributionManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
-            <version>1.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency><!-- generate jdbc proxy objects -->
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.29.0-GA</version>
+            <version>${javassist.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.transaction</groupId>
+            <artifactId>jakarta.transaction-api</artifactId>
+            <version>${jakarta.transaction-api.version}</version>
+        </dependency>
+
+        <!--compile,test-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>${jakarta.enterprise.cdi-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
+        <!-- test scope -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.3.15</version>
+            <version>${logback.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>1.35</version>
+            <version>${jmh.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>1.35</version>
+            <version>${jmh.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
+            <plugin><!-- publish to new  central repository -->
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>stone-central</publishingServerId>
+                    <autoPublish>true</autoPublish>
+                </configuration>
+            </plugin>
+            <plugin> <!-- compile java code -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.2</version>
+                <version>3.14.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <encoding>${project.source.encoding}</encoding>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/jdk.internal.misc=org.stone</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
-            <plugin>
+
+            <plugin><!-- generate JDBC proxy classes -->
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.1.1</version>
+                <version>1.6.0</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>java</goal>
                         </goals>
-                        <phase>generate-test-sources</phase>
-                        <configuration>
-                            <mainClass>org.stone.beecp.pool.ProxyClassGenerator</mainClass>
-                            <arguments>
-                                <argument>${project.basedir}/target/classes</argument>
-                            </arguments>
-                        </configuration>
+                        <phase>compile</phase>
                     </execution>
                 </executions>
+                <configuration>
+                    <includeProjectDependencies>true</includeProjectDependencies>
+                    <includePluginDependencies>true</includePluginDependencies>
+                    <mainClass>org.stone.beecp.pool.ProxyClassesGenerator</mainClass>
+                    <arguments>
+                        <argument>${project.basedir}/target/classes</argument>
+                    </arguments>
+                </configuration>
             </plugin>
 
-            <plugin>
+
+            <plugin><!-- execute test cases -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.5.3</version>
                 <configuration>
-                    <skipTests>false</skipTests>
+                    <skipTests>${skip.test}</skipTests>
                     <runOrder>alphabetical</runOrder>
                     <testFailureIgnore>true</testFailureIgnore>
                     <skipAfterFailureCount>0</skipAfterFailureCount>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <argLine>
+                        ${itCoverageAgent}
+                        --add-exports java.base/jdk.internal.misc=org.stone
+                    </argLine>
                     <includes>
+                        <!--this case must be at first -->
+                        <include>org.stone.test.InitTest</include>
+
                         <!-- beecp cases -->
-                        <include>org/stone/beecp/config/*Test.java</include>
-                        <include>org/stone/beecp/datasource/*Test.java</include>
-                        <include>org/stone/beecp/pool/*Test.java</include>
-                        <include>org/stone/beecp/other/slow/*Test.java</include>
+                        <include>org.stone.test.beecp.config.*Test</include>
+                        <include>org.stone.test.beecp.datasource.*Test</include>
+                        <include>org.stone.test.beecp.pool.*Test</include>
+                        <include>org.stone.test.beecp.other.slow.*Test</include>
 
                         <!-- beeop cases -->
-                       <include>org/stone/beeop/config/*Test.java</include>
-                       <include>org/stone/beeop/objectsource/*Test.java</include>
-                       <include>org/stone/beeop/pool/*Test.java</include>
+                        <include>org.stone.test.beeop.config.*Test</include>
+                        <include>org.stone.test.beeop.objectsource.*Test</include>
+                        <include>org.stone.test.beeop.pool.*Test</include>
                     </includes>
                 </configuration>
             </plugin>
-            <!-- generate test cover report  -->
-            <plugin>
+
+            <plugin> <!-- generate test cover report  -->
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.13</version>
+
                 <configuration>
+                    <propertyName>itCoverageAgent</propertyName>
                     <includes>
                         <include>org/stone/beecp/*</include>
                         <include>org/stone/beecp/pool/*</include>
@@ -170,12 +222,13 @@
 
                 <executions>
                     <execution>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>report</id>
+                        <id>default-report</id>
                         <phase>test</phase>
                         <goals>
                             <goal>report</goal>
@@ -184,10 +237,10 @@
                 </executions>
             </plugin>
 
-            <plugin>
+            <plugin><!-- make source jar -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -199,10 +252,18 @@
                 </executions>
             </plugin>
 
-            <plugin>
+            <plugin><!-- make java doc jar -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.11.2</version>
+                <configuration>
+                    <doclint>none</doclint>
+                    <additionalJOptions>
+                        <additionalJOption>
+                            --add-exports=java.base/jdk.internal.misc=org.stone
+                        </additionalJOption>
+                    </additionalJOptions>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -217,9 +278,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
+                <version>3.2.7</version>
                 <configuration>
-                    <skip>${gpg.skip}</skip>
+                    <skip>${skip.gpg}</skip>
                 </configuration>
                 <executions>
                     <execution>
